# brainfuq

./: .gitignore  pyproject.toml  readme.md
examples/: ghz.py  grover.py  quantum-teleporation.py
optimizer/: optimizer.py
paper/: .gitignore  bibliography.bib  paper.tex  tikz-uml.sty
paper/chapters/: 01-intro.tex  02-background.tex  03-approach.tex  04-how-to-use.tex  05-who-did-what.tex  06-conclusion.tex
qiskit_to_brainfuq/: basis_gates.py  qiskit_to_brainfuq.py
src/: cli.py
src/brainfuq_interpreter/: brainfuq_classical_interpreter.py  brainfuq_interpreter.py  brainfuq_interpreter_old.py  brainfuq_quantum_interpreter.py  brainfuq_simulator.py  brainfuq_to_qiskit_translator.py
src/optimizer/: optimizer.py
src/qiskit_to_brainfuq/: basis_gates.py  qiskit_to_brainfuq.py
tests/unit/: test_basis_gates.py  test_brainfuq_to_qiskit.py  test_optimizer.py  test_qiskit_to_brainfuq.py
